<resources>
    <string name="app_name">MyProject</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="strings">AJOUTER</string>
    <string name="gender">Sexe</string>
    <string name="Homme">Homme</string>
    <string name="Femme">Femme</string>
    <string name="mail">Mail</string>
    <string name="level">Niveau</string>
    <string name="age">Age</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="add_client_button">Ajouter client</string>
    <string name="list_client">Liste clients</string>
    <string name="title_activity_details">activityDetails</string>
    <string name="add_date">Ajouter date</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">firstname</string>

    <string-array name="settings_list_clients_text">
        <item>Prénom Nom</item>
        <item>Nom prénom</item>
    </string-array>

    <string-array name="settings_list_clients_values">
        <item>Prénom Nom</item>
        <item>Nom prénom</item>
    </string-array>

</resources>
