<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.example.usman.myproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        />
    <EditText
        android:id="@+id/editable_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:onClick="onAddButtonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strings"/>

</LinearLayout>
